workspace/log/build_2024-11-12_22-06-20/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target template_drone_control_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o[0m
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::move(const string&, const string&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:357:30: error: ‘ommand’ was not declared in this scope; did you mean ‘command’?
  357 |                         turn(ommand.command,command.value);
      |                              ^~~~~~
      |                              command
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::turn(std::string, double)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:408:13: error: ‘rate’ was not declared in this scope
  408 |             rate.sleep();
      |             ^~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:421:18: error: ‘Matrix3x3’ is not a member of ‘tf2’
  421 |             tf2::Matrix3x3(q_current).getRPY(roll, pitch, yaw);
      |                  ^~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:451:13: error: ‘rate’ was not declared in this scope
  451 |             rate.sleep();
      |             ^~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:462:18: error: ‘Matrix3x3’ is not a member of ‘tf2’
  462 |             tf2::Matrix3x3(q_current).getRPY(roll, pitch, yaw);
      |                  ^~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:466:38: error: ‘angle_tolerance’ was not declared in this scope
  466 |             if (angle_diff_return <= angle_tolerance) break;
      |                                      ^~~~~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:378:16: warning: unused variable ‘initial_angle’ [-Wunused-variable]
  378 |         double initial_angle = angle;
      |                ^~~~~~~~~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
